Add validation picture

--- a/bin/install
+++ b/bin/install
@@ -12,3 +12,5 @@ bin/console doctrine:database:create --if-not-exists
 bin/console doctrine:migrations:migrate --no-interaction
 
 bin/console rabbitmq:setup-fabric
+
+mkdir -p public/data/pictures
