Add timestamable on entities

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -241,6 +241,7 @@ validation:
             title: Picture re validation
             table:
                 title: List of invalidation
+                date: Date
                 reason: Reason
                 comment: Comment
             link_validation: Validate
