--- a/translations/validators.fr.yml
+++ b/translations/validators.fr.yml
@@ -6,3 +6,6 @@ invalidation_picture:
 
 place:
     location_required: Le choix d'un résultat est obligatoire
+
+dates:
+    start_before_end: La date de début doit être plus petite ou égale à la date de fin
