--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -46,7 +46,8 @@ breadcrumb:
     app_validation_pictures_list_processed: Photos traitées
     app_validation_pictures_revalidation: Validation
     app_travels: Mes voyages
-    app_travels_create_step1: Nouveau voyage
+    app_travels_create: Nouveau voyage
+    app_travels_add_pictures: Ajout de photos
 
 workflow:
     registration:
@@ -160,12 +161,18 @@ form:
                 validate: Valider
 
     travels:
-        step1:
+        create:
             title: Libellé
             start: Date de début
             end: Date de fin
             place_search: Lieu
             submit: Enregistrer & continuer
+        add_pictures:
+            title: Libellé
+            date: Date
+            place_search: Lieu
+            file: Fichier (image)
+            submit: Enregistrer
 
 table:
     nb_elements: "{0} Pas de résultat|{1} 1 résultat|]1,Inf[ %count% résultats"
@@ -304,6 +311,10 @@ validation:
             link_validation: Valider
 
 travels:
-    step1:
+    create:
         title: Ajouter un voyage
         ok: Le voyage a été créé. Vous allez pouvoir ajouter des photos.
+
+    add_pictures:
+        title: Ajouter des photos au voyage
+        ok: La photo a été ajoutée.
